# paddleOCR_rknn

./: paddleOCR_rknn.pro
include/: image_utils.h  ppocrv5.h
src/: CMakeLists.txt  build-linux.sh  dict_ppocrv5.h  en_dict_ppocrv5.h  main.cc  postprocess.cc  ppocrv5.h
src/rknpu2/: ppocrv5.cc
